--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,8 @@
+2025-01-20 Version: v2.4.11
+- Update API EvaluatePreConfigRules: add param ResourceTypeFormat.
+- Update API EvaluatePreConfigRules: update param EnableManagedRules.
+
+
 2025-01-15 Version: v2.4.10
 - Update API ActiveAggregateConfigRules: add param CompliancePackId.
 - Update API ActiveAggregateConfigRules: update param ConfigRuleIds.
