--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,13 @@
+2025-04-03 Version: v2.4.14
+- Update API CreateAggregateConfigRule: add request parameters ResourceNameScope.
+- Update API CreateConfigRule: add request parameters ResourceNameScope.
+- Update API GetAggregateConfigRule: add response parameters Body.ConfigRule.ResourceNameScope.
+- Update API GetConfigRule: add response parameters Body.ConfigRule.ResourceNameScope.
+- Update API UpdateAggregateConfigRule: add request parameters ResourceNameScope.
+- Update API UpdateAggregator: add request parameters FolderId.
+- Update API UpdateConfigRule: add request parameters ResourceNameScope.
+
+
 2025-03-13 Version: v2.4.13
 - Update API CreateConfigRule: update param Tag.
 - Update API ListManagedRules: add param FilterType.
