--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,14 @@
+2025-04-23 Version: v2.4.15
+- Update API ListAggregateConfigRuleEvaluationResults: add response parameters Body.EvaluationResults.EvaluationResultList.$.EvaluationId.
+- Update API ListAggregateConfigRuleEvaluationResults: add response parameters Body.EvaluationResults.EvaluationResultList.$.LastNonCompliantRecordTimestamp.
+- Update API ListAggregateResourceEvaluationResults: add response parameters Body.EvaluationResults.EvaluationResultList.$.EvaluationId.
+- Update API ListAggregateResourceEvaluationResults: add response parameters Body.EvaluationResults.EvaluationResultList.$.LastNonCompliantRecordTimestamp.
+- Update API ListConfigRuleEvaluationResults: add response parameters Body.EvaluationResults.EvaluationResultList.$.EvaluationId.
+- Update API ListConfigRuleEvaluationResults: add response parameters Body.EvaluationResults.EvaluationResultList.$.LastNonCompliantRecordTimestamp.
+- Update API ListResourceEvaluationResults: add response parameters Body.EvaluationResults.EvaluationResultList.$.EvaluationId.
+- Update API ListResourceEvaluationResults: add response parameters Body.EvaluationResults.EvaluationResultList.$.LastNonCompliantRecordTimestamp.
+
+
 2025-04-03 Version: v2.4.14
 - Update API CreateAggregateConfigRule: add request parameters ResourceNameScope.
 - Update API CreateConfigRule: add request parameters ResourceNameScope.
